--- a/CraftingSim/CraftingSim.uproject
+++ b/CraftingSim/CraftingSim.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "CraftingSim",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	]
 }
