--- a/CraftingSim/Config/DefaultEngine.ini
+++ b/CraftingSim/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Levels/Shop.Shop
 GameDefaultMap=/Game/Levels/Shop.Shop
-GlobalDefaultGameMode="/Script/CraftingSim.CraftingSimGameMode"
+GlobalDefaultGameMode=/Game/MyCraftingSimGameModeBase.MyCraftingSimGameModeBase_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
